# DLERHY

./: .dockerignore  .gitignore  DECISIONS.md  Dockerfile  LANE_STATE.json  PROGRESS.md  README.md  RUN_CONTEXT.md  TODOS.md  WORK_GRAPH.json  alembic.ini  autopilot.db  autopilot_checkpoint.db  compose.yaml  dev.sh  progress.txt  pyproject.toml  service.sh  skills-lock.json  snapshot.md  start.sh  stop.sh
.claude/: settings.local.json
.forge/: DECISIONS.md  STATE.md  init.sh  log.md
.omc/: project-memory.json
alembic/: README  env.py
artifacts/: book-agent.db-shm  book-agent.db-wal
docs/: README.md  backlog.md  chapter-local-translation-memory-design.md  classic-philosophy-reading-pilot-design.md  decisions.md  error-taxonomy.md  export-runtime-incidents.md  high-fidelity-document-translation-incremental-plan.md  high-fidelity-document-translation-spec.md  issue-rerun-matrix.md  long-task-run-control.md  mainline-progress.md  merged-export-rendering-policy.md  multi-agent-architecture-design.md  multi-agent-final-implementation-plan.md  multi-agent-translation-product-review.md  optimization-backlog.md  orchestrator-state-machine.md  p0-database-ddl.sql  parallel-autopilot-mvp-spec.md  parallel-autopilot-skill-package.md  pdf-ocr-layout-refactoring-plan.md  pdf-support-implementation-plan.md  pdf_backlog.md  pdf_decisions.md  pdf_status.md  phase-2-pdf-scan-plan.md  phase-3-delivery-upgrade-plan.md  phase-3-parallel-autopilot-plan.md  phase-3-pdf-scan-scale-plan.md  phase-3-review-naturalness-plan.md  phase-4-ocr-layout-assist-core-execution-plan.md  status.md  (+7 more)
(+545 files in other folders)
